RESOLVED FIXED213381
Web Inspector: RemoteInspector::singleton() slows down MobileSafari launch
https://bugs.webkit.org/show_bug.cgi?id=213381
Summary Web Inspector: RemoteInspector::singleton() slows down MobileSafari launch
Chris Dumez
Reported 2020-06-19 08:54:07 PDT
RemoteInspector::singleton() is slow and negatively impacts the MobileSafari launch time.
Attachments
Patch (3.05 KB, patch)
2020-06-19 09:05 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2020-06-19 08:54:25 PDT
Chris Dumez
Comment 2 2020-06-19 09:05:00 PDT
EWS
Comment 3 2020-06-19 09:30:13 PDT
Committed r263271: <https://trac.webkit.org/changeset/263271> All reviewed patches have been landed. Closing bug and clearing flags on attachment 402288 [details].
Note You need to log in before you can comment on or make changes to this bug.